HTML turismo generado.

--- a/turismo.html
+++ b/turismo.html
@@ -2,16 +2,15 @@
 <html lang="es">
 
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Avilés</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <header>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/Escudo_de_Avil%C3%A9s.svg/1200px-Escudo_de_Avil%C3%A9s.svg.png"
-            alt="Escudo de Aviles" />
-        <!-- Imagen realizada por el usuario SAnchoPanzaXXI de wikipedia bajo licencia CC BY-SA 4.0 -->
+    <header><img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/Escudo_de_Avil%C3%A9s.svg/1200px-Escudo_de_Avil%C3%A9s.svg.png"
+            alt="Escudo de Aviles">
         <h1>Avilés</h1>
     </header>
     <nav>
@@ -23,26 +22,159 @@
             <li><a class="seleccion">Turismo</a></li>
         </ul>
     </nav>
-
+    <h2>El sueño del acero</h2>
+    <p>La comarca de Avilés ejemplifica como ninguna el pasado, el presente y el futuro de Asturias. Por su tradición
+        obrera y siderúrgica, de la que quedan aún multitud de restos arqueológicos industriales y chimeneas humeantes,
+        por su capacidad para reinventarse y emerger de la crisis como un territorio moderno que sabe conservar su
+        patrimonio y por sus sueños culturales y vanguardistas.</p>
     <section>
-        <h2>Visita la comarca de Avilés</h2>
-        <!-- datos extraidos de https://www.turismoasturias.es/descubre/donde-ir/comarcas/comarca-aviles -->
-        <p>Combina costa e interior y ostenta varios ‘récords': la última gran obra de Niemeyer, el casco histórico mejor conservado de Asturias, la primera piscina fluvial, los carnavales más famosos, uno de los quesos azules más sabrosos, y cuna de la única mina submarina de España.</p>
-        <section>
-            <h3>Datos sobre la comarca</h3>
-            <p>Central, con costa e interior. Con arte e industria. Con historia y presente. Con mucho ambiente. La Comarca Avilés tiene de todo: ambiente rural marcado por una dulce orografía que combina la llanura y las suaves montañas. Caserías y hórreos. Prados y ganado.</p>
-            <p>Sendas verdes, como la que lleva hasta el Pico Gorfolí, en Illas, donde también hay una de las pocas piscinas fluviales de Asturias, y fábricas de queso azul como el afamado La Peral, que ubica, gastronómicamente hablando, la comarca en el mundo.</p>
-            <p>También tiene ciudad y como no, con mucha historia. Un paseo por la ciudad de Avilés, la Villa medieval de Asturias, conocida popularmente como la Villa del Adelantado, nos transporta a un pasado de señoríos medievales como el del Marqués de Ferrera, o a los tiempos de la conquista de América donde tuvo gran protagonismo Pedro Menéndez de Avilés, que ha dado el sobrenombre a la ciudad.</p>
-            <p>El casco histórico de Avilés es el más grande y uno de los mejor conservados del norte de España, escenario perfecto para los carnavales más famosos de la región. Por si fuera poco, la saneada ría de Avilés es hoy un lugar más que idóneo para la práctica de deportes náuticos como la vela o el piragüismo y posee ya pantalanes deportivos y clubes, que navegan con el fondo de la arquitectura más vanguardista, la del Centro Niemeyer, la última gran obra del genio brasileño, que se ‘baña' a orillas de la ría avilesina y desde cuya Torre proporciona una impresionante vista panorámica de la ciudad.</p>
-            <p>Las playas las aporta Castrillón, donde se ubica el arenal más grande de Asturias, el playón de Bayas, que es el que siempre se ve desde los aviones que aterrizan y despegan del Aeropuerto de Asturias, localizado en este concejo. Definitivamente Castrillón es tierra de otros grandes arenales como San Juan de Nieva o la playa de Salinas, colofón costero de uno de los más antiguos y señoriales lugares de veraneo de Asturias, que cuenta con un curioso museo de Anclas al aire libre.</p>
-            <p>Una comarca bien comunicada, muy céntrica, ideal para la doble faceta de vida urbana y rural, para el deporte y para el relax, para la buena cocina y la fiesta, para navegar y para tener los pies en la tierra. Así es la Comarca Avilés.</p>
-        </section>
+        <h2>El parque de Ferrera</h2>
+        <p>Esta propiedad perteneció al marquesado de Ferrera desde el siglo XV, aunque no sería hasta mediados del
+            siglo XVII con la construcción del palacio cuando la adecuaron con el fin de transformarla en unos jardines
+            de estilo inglés que albergaran las caballerizas y que sirviesen también como lugar de recreo para esta
+            ilustre familia avilesina.​ Además, incluye también un jardín de estilo francés con varias fuentes en la
+            zona más próxima al palacete, planificada a petición de la marquesa para poder pasear tranquilamente
+            teniendo a su servicio cerca.</p>
+        <h3>Coordenadas (latitud Norte y longitud Oeste):</h3>
+        <ul>
+            <li class="latitud">43.55264722222222</li>
+            <li class="longitud">-5.922652777777778</li>
+        </ul>
+        <h3>Fotografías</h3>
+        <ul>
+            <li><a
+                    href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/ParqueFerrera2.JPG/273px-ParqueFerrera2.JPG">https://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/ParqueFerrera2.JPG/273px-ParqueFerrera2.JPG</a>
+            </li>
+            <li><a
+                    href="http://www.asturiasturismo.com/asturias/fotografias/lugar/lugar_Parque%20Ferrera120720111135180.jpg">http://www.asturiasturismo.com/asturias/fotografias/lugar/lugar_Parque%20Ferrera120720111135180.jpg</a>
+            </li>
+            <li><a
+                    href="http://3.bp.blogspot.com/--t2eFsze1lI/Tt6lJgT--QI/AAAAAAAAGYg/r_YXR3JlRYY/s1600/parque-ferrera-22.JPG">http://3.bp.blogspot.com/--t2eFsze1lI/Tt6lJgT--QI/AAAAAAAAGYg/r_YXR3JlRYY/s1600/parque-ferrera-22.JPG</a>
+            </li>
+        </ul>
+        <h3>Vídeos</h3>
+        <ul>
+            <li><a href="https://youtu.be/93dWoDRacdY">https://youtu.be/93dWoDRacdY</a></li>
+        </ul>
+        <h3>Curiosidades</h3>
+        <p>Es uno de los principales puntos más concurridos durante la festividad local de la "Comida en la Calle".</p>
+        <p>Numerosos jugadores de jugger utilizan las numerosas zonas verdes de las inmediaciones como campo de
+            entrenamiento.</p>
+        <h3>Noticias</h3>
+        <p>Representantes de los partidos políticos de Avilés se reunen para una fotografía histórica.</p>
+        <p>Una partida presupuestaria del ayuntamiento será destinada para la rehabilitación del habitat de las ocas del
+            estanque.</p>
+        <h3>Locales próximos</h3>
+        <ul>
+            <li>NH Collection Palacio de Aviles</li>
+            <li>Tipo de negocio: Hotel</li>
+            <li>Horario: Recepción 24 horas</li>
+            <li>Teléfono: 916 00 83 36</li>
+        </ul>
+        <ul>
+            <li>Casa Tataguyo</li>
+            <li>Tipo de negocio: Restaurante</li>
+            <li>Horario: De lunes a viernes de 9:00-24:00</li>
+            <li>Teléfono: 985 56 48 15</li>
+        </ul>
     </section>
-
+    <section>
+        <h2>Embalse de Trasona</h2>
+        <p>En sus aguas entrenan profesionales del piragüismo y del remo y se celebran numerosos campeonatos
+            internacionales. Podemos destacar al palista avilesino Enrique José Rodríguez Martín, tricampeón de Asturias
+            de Surfski entre otras gestas de su carrera deportiva.</p>
+        <h3>Coordenadas (latitud Norte y longitud Oeste):</h3>
+        <ul>
+            <li class="latitud">43.54651388888889</li>
+            <li class="longitud">-5.878425000000001</li>
+        </ul>
+        <h3>Fotografías</h3>
+        <ul>
+            <li><a
+                    href="http://aviles.es/documents/12317/22611/Jira.jpg/16728ec1-086d-49ab-8bee-4754ed08c89f?t=1407239275194">http://aviles.es/documents/12317/22611/Jira.jpg/16728ec1-086d-49ab-8bee-4754ed08c89f?t=1407239275194</a>
+            </li>
+            <li><a
+                    href="http://www.asturiactiva.com/sites/default/files/EmbalsedeTrasona_1.jpg">http://www.asturiactiva.com/sites/default/files/EmbalsedeTrasona_1.jpg</a>
+            </li>
+            <li><a
+                    href="https://1.bp.blogspot.com/-wBvmW9i8pts/V9-nIWc8t_I/AAAAAAAGJ0U/5muL9ovUdRkguAweicb9WnQZ_j8SNkFLQCLcB/s1600/Cand%25C3%25A1s-0021.jpg">https://1.bp.blogspot.com/-wBvmW9i8pts/V9-nIWc8t_I/AAAAAAAGJ0U/5muL9ovUdRkguAweicb9WnQZ_j8SNkFLQCLcB/s1600/Cand%25C3%25A1s-0021.jpg</a>
+            </li>
+        </ul>
+        <h3>Vídeos</h3>
+        <ul>
+            <li><a href="https://youtu.be/iMMKfqGkR1U">https://youtu.be/iMMKfqGkR1U</a></li>
+        </ul>
+        <h3>Curiosidades</h3>
+        <p>Piragüistas de élite como Saúl Craviotto utiliza las instalaciones del Centro de Tecnificación Deportiva
+            situado en el embalse.</p>
+        <p>Alberga la festividad popular del 1 de mayo en las zonas de merendero.</p>
+        <h3>Noticias</h3>
+        <p>El embalse de Trasona albergará las próximas citas del campeonato de media maratón de piragüismo.</p>
+        <p>Reabre la cafetería del Centro de Tecnificación Deportiva de Trasona tras 4 años de inactiviad.</p>
+        <h3>Locales próximos</h3>
+        <ul>
+            <li>ParqueAstur</li>
+            <li>Tipo de negocio: Centro Comercial</li>
+            <li>Horario: Todos los días de 10:00-22:00</li>
+            <li>Teléfono: 985 51 46 17</li>
+        </ul>
+        <ul>
+            <li>URH Hotel Spa Zen Balagares</li>
+            <li>Tipo de negocio: Hotel</li>
+            <li>Horario: Recepción 24 horas</li>
+            <li>Teléfono: 974 56 88 87</li>
+        </ul>
+    </section>
+    <section>
+        <h2>Ermita Nuestra Señora Virgen de La Luz</h2>
+        <p>Ermita situada en la cumbre de la colina de la Xuncarosa, dispone una de las mejores panorámicas de la Villa
+            de Avilés.</p>
+        <h3>Coordenadas (latitud Norte y longitud Oeste):</h3>
+        <ul>
+            <li class="latitud">43.54102777777778</li>
+            <li class="longitud">-5.913436111111111</li>
+        </ul>
+        <h3>Fotografías</h3>
+        <ul>
+            <li><a
+                    href="http://www.gruposhowaviles2018.com/quever/img_3718_thumb.jpg">http://www.gruposhowaviles2018.com/quever/img_3718_thumb.jpg</a>
+            </li>
+            <li><a
+                    href="https://static.panoramio.com.storage.googleapis.com/photos/large/35689115.jpg">https://static.panoramio.com.storage.googleapis.com/photos/large/35689115.jpg</a>
+            </li>
+            <li><a
+                    href="https://static3.elcomercio.es/www/multimedia/201708/11/media/cortadas/26706191-U40217265196OKI--624x416@El%20Comercio-ElComercio.JPG">https://static3.elcomercio.es/www/multimedia/201708/11/media/cortadas/26706191-U40217265196OKI--624x416@El%20Comercio-ElComercio.JPG</a>
+            </li>
+        </ul>
+        <h3>Vídeos</h3>
+        <ul>
+            <li><a href="https://youtu.be/QoiU9u-bMNE">https://youtu.be/QoiU9u-bMNE</a></li>
+        </ul>
+        <h3>Curiosidades</h3>
+        <p>Se celebra el tradicional evento en el que una pareja próxima de casarse reafirma su amor rompiendo un frasco
+            de arroz con leche.</p>
+        <p>La ermita es uno de los edificios más antiguos de Avilés.</p>
+        <h3>Noticias</h3>
+        <p>El arzovispado anuncia la restauracion de los frescos de la ermita de La Luz.</p>
+        <p>El ayuntamiento comienza la mejora de la via de acceso a la ermita de La Luz.</p>
+        <h3>Locales próximos</h3>
+        <ul>
+            <li>Restaurante-Sidrería Panorama</li>
+            <li>Tipo de negocio: Restaurante</li>
+            <li>Horario: Todos los días de 12:00-1:45</li>
+            <li>Teléfono: 985 57 99 84</li>
+        </ul>
+        <ul>
+            <li>Parrilla-Sidrería Los Sauces</li>
+            <li>Tipo de negocio: Restaurante</li>
+            <li>Horario: De martes a domingo de 11:00-24:00</li>
+            <li>Teléfono: 985 54 90 19</li>
+        </ul>
+    </section>
     <footer>
-        <p>Página realizada por Enrique José Rodríguez Martín </p>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Copyleft.svg/1024px-Copyleft.svg.png"
-            alt="Logotipo Copyleft" />
+        <p>Página realizada por Enrique José Rodríguez Martín </p><img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Copyleft.svg/1024px-Copyleft.svg.png"
+            alt="Logotipo Copyleft">
     </footer>
 </body>
 
