--- a/historia.html
+++ b/historia.html
@@ -23,7 +23,7 @@
             <li><a href="cultura.html">Cultura</a></li>
             <li><a class="seleccion">Historia</a></li>
             <li><a href="deporte.html">Deporte</a></li>
-            <li><a href="turismo.xml">Turismo</a></li>
+            <li><a href="turismo.html">Turismo</a></li>
         </ul>
     </nav>
 
