--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <li><a href="cultura.html">Cultura</a></li>
       <li><a href="historia.html">Historia</a></li>
       <li><a href="deporte.html">Deporte</a></li>
-      <li><a href="turismo.xml">Turismo</a></li>
+      <li><a href="turismo.html">Turismo</a></li>
     </ul>
   </nav>
   <div class="slideshow">
