--- a/turismo.html
+++ b/turismo.html
@@ -41,17 +41,8 @@
             <li class="longitud">-5.922652777777778</li>
         </ul>
         <h3>Fotografías</h3>
-        <ul>
-            <li><a
-                    href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/ParqueFerrera2.JPG/273px-ParqueFerrera2.JPG">https://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/ParqueFerrera2.JPG/273px-ParqueFerrera2.JPG</a>
-            </li>
-            <li><a
-                    href="http://www.asturiasturismo.com/asturias/fotografias/lugar/lugar_Parque%20Ferrera120720111135180.jpg">http://www.asturiasturismo.com/asturias/fotografias/lugar/lugar_Parque%20Ferrera120720111135180.jpg</a>
-            </li>
-            <li><a
-                    href="http://3.bp.blogspot.com/--t2eFsze1lI/Tt6lJgT--QI/AAAAAAAAGYg/r_YXR3JlRYY/s1600/parque-ferrera-22.JPG">http://3.bp.blogspot.com/--t2eFsze1lI/Tt6lJgT--QI/AAAAAAAAGYg/r_YXR3JlRYY/s1600/parque-ferrera-22.JPG</a>
-            </li>
-        </ul>
+        <ul><img src="./multimedia/img/ferrera1.jpg" alt="Fotografia del punto. ./multimedia/img/ferrera1.jpg"><img
+                src="./multimedia/img/ferrera2.jpg" alt="Fotografia del punto. ./multimedia/img/ferrera2.jpg"></ul>
         <h3>Vídeos</h3>
         <ul>
             <li><a href="https://youtu.be/93dWoDRacdY">https://youtu.be/93dWoDRacdY</a></li>
@@ -89,17 +80,9 @@
             <li class="longitud">-5.878425000000001</li>
         </ul>
         <h3>Fotografías</h3>
-        <ul>
-            <li><a
-                    href="http://aviles.es/documents/12317/22611/Jira.jpg/16728ec1-086d-49ab-8bee-4754ed08c89f?t=1407239275194">http://aviles.es/documents/12317/22611/Jira.jpg/16728ec1-086d-49ab-8bee-4754ed08c89f?t=1407239275194</a>
-            </li>
-            <li><a
-                    href="http://www.asturiactiva.com/sites/default/files/EmbalsedeTrasona_1.jpg">http://www.asturiactiva.com/sites/default/files/EmbalsedeTrasona_1.jpg</a>
-            </li>
-            <li><a
-                    href="https://1.bp.blogspot.com/-wBvmW9i8pts/V9-nIWc8t_I/AAAAAAAGJ0U/5muL9ovUdRkguAweicb9WnQZ_j8SNkFLQCLcB/s1600/Cand%25C3%25A1s-0021.jpg">https://1.bp.blogspot.com/-wBvmW9i8pts/V9-nIWc8t_I/AAAAAAAGJ0U/5muL9ovUdRkguAweicb9WnQZ_j8SNkFLQCLcB/s1600/Cand%25C3%25A1s-0021.jpg</a>
-            </li>
-        </ul>
+        <ul><img src="./multimedia/img/trasona1.jpg" alt="Fotografia del punto. ./multimedia/img/trasona1.jpg"><img
+                src="./multimedia/img/trasona2.jpg" alt="Fotografia del punto. ./multimedia/img/trasona2.jpg"><img
+                src="./multimedia/img/trasona3.jpg" alt="Fotografia del punto. ./multimedia/img/trasona3.jpg"></ul>
         <h3>Vídeos</h3>
         <ul>
             <li><a href="https://youtu.be/iMMKfqGkR1U">https://youtu.be/iMMKfqGkR1U</a></li>
@@ -135,17 +118,7 @@
             <li class="longitud">-5.913436111111111</li>
         </ul>
         <h3>Fotografías</h3>
-        <ul>
-            <li><a
-                    href="http://www.gruposhowaviles2018.com/quever/img_3718_thumb.jpg">http://www.gruposhowaviles2018.com/quever/img_3718_thumb.jpg</a>
-            </li>
-            <li><a
-                    href="https://static.panoramio.com.storage.googleapis.com/photos/large/35689115.jpg">https://static.panoramio.com.storage.googleapis.com/photos/large/35689115.jpg</a>
-            </li>
-            <li><a
-                    href="https://static3.elcomercio.es/www/multimedia/201708/11/media/cortadas/26706191-U40217265196OKI--624x416@El%20Comercio-ElComercio.JPG">https://static3.elcomercio.es/www/multimedia/201708/11/media/cortadas/26706191-U40217265196OKI--624x416@El%20Comercio-ElComercio.JPG</a>
-            </li>
-        </ul>
+        <ul><img src="./multimedia/img/ermita1.jpg" alt="Fotografia del punto. ./multimedia/img/ermita1.jpg"></ul>
         <h3>Vídeos</h3>
         <ul>
             <li><a href="https://youtu.be/QoiU9u-bMNE">https://youtu.be/QoiU9u-bMNE</a></li>
