Arreglo imagen JPG.

--- a/turismo.html
+++ b/turismo.html
@@ -42,7 +42,7 @@
         </ul>
         <h3>Fotografías</h3>
         <ul><img src="./multimedia/img/ferrera1.jpg" alt="Fotografia del punto. ./multimedia/img/ferrera1.jpg"><img
-                src="./multimedia/img/ferrera2.jpg" alt="Fotografia del punto. ./multimedia/img/ferrera2.jpg"></ul>
+                src="./multimedia/img/ferrera2.JPG" alt="Fotografia del punto. ./multimedia/img/ferrera2.JPG"></ul>
         <h3>Vídeos</h3>
         <ul>
             <li><a href="https://youtu.be/93dWoDRacdY">https://youtu.be/93dWoDRacdY</a></li>
