--- a/historia.html
+++ b/historia.html
@@ -136,10 +136,10 @@
         </svg>
         <p>Leyenda de izquierda a derecha:</p>
         <ul>
-            <li>Servicios 61% (1),</li>
-            <li>Comercio 22% (2),</li>
-            <li>Construcción 12% (3),</li>
-            <li>Industria 5% (4).</li>
+            <li class='lateral'>Servicios 61% (1),</li>
+            <li class='lateral'>Comercio 22% (2),</li>
+            <li class='lateral'>Construcción 12% (3),</li>
+            <li class='lateral'>Industria 5% (4).</li>
         </ul>
     </section>
     <footer>
