--- a/turismo.html
+++ b/turismo.html
@@ -5,6 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Avilés</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6j4mF6blrc4kZ54S6vYZ2_FpMY9VzyRU&callback=g.readFile"></script>
+    <script src="geolocalizacion.js"></script>
 </head>
 
 <body>
@@ -144,6 +147,7 @@
             <li>Teléfono: 985 54 90 19</li>
         </ul>
     </section>
+    <div id="mapa"></div>
     <footer>
         <p>Página realizada por Enrique José Rodríguez Martín </p><img
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Copyleft.svg/1024px-Copyleft.svg.png"
