Prueba de foro sin funcionalidad.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <li><a href="historia.html">Historia</a></li>
       <li><a href="deporte.html">Deporte</a></li>
       <li><a href="turismo.html">Turismo</a></li>
+      <li><a href="foro.php">Foro</a></li>
     </ul>
   </nav>
   <div class="slideshow">
