--- a/turismo.html
+++ b/turismo.html
@@ -23,6 +23,7 @@
             <li><a href="historia.html">Historia</a></li>
             <li><a href="deporte.html">Deporte</a></li>
             <li><a class="seleccion">Turismo</a></li>
+            <li><a href="foro.php">Foro</a></li>
         </ul>
     </nav>
     <h2>El sueño del acero</h2>
