--- a/cultura.html
+++ b/cultura.html
@@ -21,6 +21,7 @@
             <li><a href="historia.html">Historia</a></li>
             <li><a href="deporte.html">Deporte</a></li>
             <li><a href="turismo.html">Turismo</a></li>
+            <li><a href="foro.php">Foro</a></li>
         </ul>
     </nav>
     <section>
