--- a/deporte.html
+++ b/deporte.html
@@ -21,6 +21,7 @@
             <li><a href="historia.html">Historia</a></li>
             <li><a class="seleccion">Deporte</a></li>
             <li><a href="turismo.html">Turismo</a></li>
+            <li><a href="foro.php">Foro</a></li>
         </ul>
     </nav>
 
