--- a/historia.html
+++ b/historia.html
@@ -23,6 +23,7 @@
             <li><a class="seleccion">Historia</a></li>
             <li><a href="deporte.html">Deporte</a></li>
             <li><a href="turismo.html">Turismo</a></li>
+            <li><a href="foro.php">Foro</a></li>
         </ul>
     </nav>
 
