PHP sin testear,

--- a/turismo.html
+++ b/turismo.html
@@ -60,18 +60,22 @@
         <p>Una partida presupuestaria del ayuntamiento será destinada para la rehabilitación del habitat de las ocas del
             estanque.</p>
         <h3>Locales próximos</h3>
-        <ul>
-            <li>NH Collection Palacio de Aviles</li>
-            <li>Tipo de negocio: Hotel</li>
-            <li>Horario: Recepción 24 horas</li>
-            <li>Teléfono: 916 00 83 36</li>
-        </ul>
-        <ul>
-            <li>Casa Tataguyo</li>
-            <li>Tipo de negocio: Restaurante</li>
-            <li>Horario: De lunes a viernes de 9:00-24:00</li>
-            <li>Teléfono: 985 56 48 15</li>
-        </ul>
+        <section class="local">
+            <ul>
+                <li>NH Collection Palacio de Aviles</li>
+                <li>Tipo de negocio: Hotel</li>
+                <li>Horario: Recepción 24 horas</li>
+                <li>Teléfono: 916 00 83 36</li>
+            </ul>
+        </section>
+        <section class="local">
+            <ul>
+                <li>Casa Tataguyo</li>
+                <li>Tipo de negocio: Restaurante</li>
+                <li>Horario: De lunes a viernes de 9:00-24:00</li>
+                <li>Teléfono: 985 56 48 15</li>
+            </ul>
+        </section>
     </section>
     <section>
         <h2>Embalse de Trasona</h2>
@@ -99,18 +103,22 @@
         <p>El embalse de Trasona albergará las próximas citas del campeonato de media maratón de piragüismo.</p>
         <p>Reabre la cafetería del Centro de Tecnificación Deportiva de Trasona tras 4 años de inactiviad.</p>
         <h3>Locales próximos</h3>
-        <ul>
-            <li>ParqueAstur</li>
-            <li>Tipo de negocio: Centro Comercial</li>
-            <li>Horario: Todos los días de 10:00-22:00</li>
-            <li>Teléfono: 985 51 46 17</li>
-        </ul>
-        <ul>
-            <li>URH Hotel Spa Zen Balagares</li>
-            <li>Tipo de negocio: Hotel</li>
-            <li>Horario: Recepción 24 horas</li>
-            <li>Teléfono: 974 56 88 87</li>
-        </ul>
+        <section class="local">
+            <ul>
+                <li>ParqueAstur</li>
+                <li>Tipo de negocio: Centro Comercial</li>
+                <li>Horario: Todos los días de 10:00-22:00</li>
+                <li>Teléfono: 985 51 46 17</li>
+            </ul>
+        </section>
+        <section class="local"></section>
+            <ul>
+                <li>URH Hotel Spa Zen Balagares</li>
+                <li>Tipo de negocio: Hotel</li>
+                <li>Horario: Recepción 24 horas</li>
+                <li>Teléfono: 974 56 88 87</li>
+            </ul>
+        </section>
     </section>
     <section>
         <h2>Ermita Nuestra Señora Virgen de La Luz</h2>
@@ -135,18 +143,22 @@
         <p>El arzovispado anuncia la restauracion de los frescos de la ermita de La Luz.</p>
         <p>El ayuntamiento comienza la mejora de la via de acceso a la ermita de La Luz.</p>
         <h3>Locales próximos</h3>
-        <ul>
-            <li>Restaurante-Sidrería Panorama</li>
-            <li>Tipo de negocio: Restaurante</li>
-            <li>Horario: Todos los días de 12:00-1:45</li>
-            <li>Teléfono: 985 57 99 84</li>
-        </ul>
-        <ul>
-            <li>Parrilla-Sidrería Los Sauces</li>
-            <li>Tipo de negocio: Restaurante</li>
-            <li>Horario: De martes a domingo de 11:00-24:00</li>
-            <li>Teléfono: 985 54 90 19</li>
-        </ul>
+        <section class="local">
+            <ul>
+                <li>Restaurante-Sidrería Panorama</li>
+                <li>Tipo de negocio: Restaurante</li>
+                <li>Horario: Todos los días de 12:00-1:45</li>
+                <li>Teléfono: 985 57 99 84</li>
+            </ul>
+        </section>
+        <section class="local">
+            <ul>
+                <li>Parrilla-Sidrería Los Sauces</li>
+                <li>Tipo de negocio: Restaurante</li>
+                <li>Horario: De martes a domingo de 11:00-24:00</li>
+                <li>Teléfono: 985 54 90 19</li>
+            </ul>
+        </section>
     </section>
     <div id="mapa"></div>
     <footer>
