--- a/turismo.html
+++ b/turismo.html
@@ -45,8 +45,10 @@
             <li class="longitud">-5.922652777777778</li>
         </ul>
         <h3>Fotografías</h3>
-        <ul><img src="./multimedia/img/ferrera1.jpg" alt="Fotografia del punto. ./multimedia/img/ferrera1.jpg"><img
-                src="./multimedia/img/ferrera2.JPG" alt="Fotografia del punto. ./multimedia/img/ferrera2.JPG"></ul>
+        <ul><img src="./multimedia/img/ferrera1.jpg" alt="Fotografia del punto. ./multimedia/img/ferrera1.jpg">
+            <img src="./multimedia/img/ferrera2.JPG" alt="Fotografia del punto. ./multimedia/img/ferrera2.jpg">
+            <img src="./multimedia/img/ferrera3.JPG" alt="Fotografia del punto. ./multimedia/img/ferrera3.jpg">
+            </ul>
         <h3>Vídeos</h3>
         <ul>
             <li><a href="https://youtu.be/93dWoDRacdY">https://youtu.be/93dWoDRacdY</a></li>
@@ -130,7 +132,10 @@
             <li class="longitud">-5.913436111111111</li>
         </ul>
         <h3>Fotografías</h3>
-        <ul><img src="./multimedia/img/ermita1.jpg" alt="Fotografia del punto. ./multimedia/img/ermita1.jpg"></ul>
+        <ul><img src="./multimedia/img/ermita1.jpg" alt="Fotografia del punto. ./multimedia/img/ermita1.jpg">
+            <img src="./multimedia/img/ermita2.jpg" alt="Fotografia del punto. ./multimedia/img/ermita2.jpg">
+            <img src="./multimedia/img/ermita3.jpg" alt="Fotografia del punto. ./multimedia/img/ermita3.jpg">
+        </ul>
         <h3>Vídeos</h3>
         <ul>
             <li><a href="https://youtu.be/QoiU9u-bMNE">https://youtu.be/QoiU9u-bMNE</a></li>
