--- a/turismo.html
+++ b/turismo.html
@@ -47,7 +47,7 @@
         <h3>Fotografías</h3>
         <ul><img src="./multimedia/img/ferrera1.jpg" alt="Fotografia del punto. ./multimedia/img/ferrera1.jpg">
             <img src="./multimedia/img/ferrera2.JPG" alt="Fotografia del punto. ./multimedia/img/ferrera2.jpg">
-            <img src="./multimedia/img/ferrera3.JPG" alt="Fotografia del punto. ./multimedia/img/ferrera3.jpg">
+            <img src="./multimedia/img/ferrera3.jpg" alt="Fotografia del punto. ./multimedia/img/ferrera3.jpg">
             </ul>
         <h3>Vídeos</h3>
         <ul>
