--- a/turismo.html
+++ b/turismo.html
@@ -50,9 +50,7 @@
             <img src="./multimedia/img/ferrera3.jpg" alt="Fotografia del punto. ./multimedia/img/ferrera3.jpg">
             </ul>
         <h3>Vídeos</h3>
-        <ul>
-            <li><a href="https://youtu.be/93dWoDRacdY">https://youtu.be/93dWoDRacdY</a></li>
-        </ul>
+        <video controls="controls"><source src="./multimedia/video/ferrera.mp4" type="video/mp4"></video>
         <h3>Curiosidades</h3>
         <p>Es uno de los principales puntos más concurridos durante la festividad local de la "Comida en la Calle".</p>
         <p>Numerosos jugadores de jugger utilizan las numerosas zonas verdes de las inmediaciones como campo de
@@ -94,9 +92,7 @@
                 src="./multimedia/img/trasona2.jpg" alt="Fotografia del punto. ./multimedia/img/trasona2.jpg"><img
                 src="./multimedia/img/trasona3.jpg" alt="Fotografia del punto. ./multimedia/img/trasona3.jpg"></ul>
         <h3>Vídeos</h3>
-        <ul>
-            <li><a href="https://youtu.be/iMMKfqGkR1U">https://youtu.be/iMMKfqGkR1U</a></li>
-        </ul>
+        <video controls="controls"><source src="./multimedia/video/pantano.mp4" type="video/mp4"></video>
         <h3>Curiosidades</h3>
         <p>Piragüistas de élite como Saúl Craviotto utiliza las instalaciones del Centro de Tecnificación Deportiva
             situado en el embalse.</p>
@@ -137,9 +133,7 @@
             <img src="./multimedia/img/ermita3.jpg" alt="Fotografia del punto. ./multimedia/img/ermita3.jpg">
         </ul>
         <h3>Vídeos</h3>
-        <ul>
-            <li><a href="https://youtu.be/QoiU9u-bMNE">https://youtu.be/QoiU9u-bMNE</a></li>
-        </ul>
+        <video controls="controls"><source src="./multimedia/video/ermita.mp4" type="video/mp4"></video>
         <h3>Curiosidades</h3>
         <p>Se celebra el tradicional evento en el que una pareja próxima de casarse reafirma su amor rompiendo un frasco
             de arroz con leche.</p>
