Revision css turismo.

--- a/turismo.html
+++ b/turismo.html
@@ -61,20 +61,16 @@
             estanque.</p>
         <h3>Locales próximos</h3>
         <section class="local">
-            <ul>
-                <li>NH Collection Palacio de Aviles</li>
-                <li>Tipo de negocio: Hotel</li>
-                <li>Horario: Recepción 24 horas</li>
-                <li>Teléfono: 916 00 83 36</li>
-            </ul>
+                <p><b>NH Collection Palacio de Aviles</b></p>
+                <p>Tipo de negocio: Hotel</p>
+                <p>Horario: Recepción 24 horas</p>
+                <p>Teléfono: 916 00 83 36</p>
         </section>
         <section class="local">
-            <ul>
-                <li>Casa Tataguyo</li>
-                <li>Tipo de negocio: Restaurante</li>
-                <li>Horario: De lunes a viernes de 9:00-24:00</li>
-                <li>Teléfono: 985 56 48 15</li>
-            </ul>
+                <p><b>Casa Tataguyo</b></p>
+                <p>Tipo de negocio: Restaurante</p>
+                <p>Horario: De lunes a viernes de 9:00-24:00</p>
+                <p>Teléfono: 985 56 48 15</p>
         </section>
     </section>
     <section>
@@ -102,20 +98,16 @@
         <p>Reabre la cafetería del Centro de Tecnificación Deportiva de Trasona tras 4 años de inactiviad.</p>
         <h3>Locales próximos</h3>
         <section class="local">
-            <ul>
-                <li>ParqueAstur</li>
-                <li>Tipo de negocio: Centro Comercial</li>
-                <li>Horario: Todos los días de 10:00-22:00</li>
-                <li>Teléfono: 985 51 46 17</li>
-            </ul>
+                <p><b>ParqueAstur</b></p>
+                <p>Tipo de negocio: Centro Comercial</p>
+                <p>Horario: Todos los días de 10:00-22:00</p>
+                <p>Teléfono: 985 51 46 17</p>
         </section>
         <section class="local"></section>
-            <ul>
-                <li>URH Hotel Spa Zen Balagares</li>
-                <li>Tipo de negocio: Hotel</li>
-                <li>Horario: Recepción 24 horas</li>
-                <li>Teléfono: 974 56 88 87</li>
-            </ul>
+                <p><b>URH Hotel Spa Zen Balagares</b></p>
+                <p>Tipo de negocio: Hotel</p>
+                <p>Horario: Recepción 24 horas</p>
+                <p>Teléfono: 974 56 88 87</p>
         </section>
     </section>
     <section>
@@ -139,24 +131,20 @@
             de arroz con leche.</p>
         <p>La ermita es uno de los edificios más antiguos de Avilés.</p>
         <h3>Noticias</h3>
-        <p>El arzovispado anuncia la restauracion de los frescos de la ermita de La Luz.</p>
+        <p>El arzobispado anuncia la restauracion de los frescos de la ermita de La Luz.</p>
         <p>El ayuntamiento comienza la mejora de la via de acceso a la ermita de La Luz.</p>
         <h3>Locales próximos</h3>
         <section class="local">
-            <ul>
-                <li>Restaurante-Sidrería Panorama</li>
-                <li>Tipo de negocio: Restaurante</li>
-                <li>Horario: Todos los días de 12:00-1:45</li>
-                <li>Teléfono: 985 57 99 84</li>
-            </ul>
+                <p><b>Restaurante-Sidrería Panorama</b></p>
+                <p>Tipo de negocio: Restaurante</li>
+                <p>Horario: Todos los días de 12:00-1:45</p>
+                <p>Teléfono: 985 57 99 84</p>
         </section>
         <section class="local">
-            <ul>
-                <li>Parrilla-Sidrería Los Sauces</li>
-                <li>Tipo de negocio: Restaurante</li>
-                <li>Horario: De martes a domingo de 11:00-24:00</li>
-                <li>Teléfono: 985 54 90 19</li>
-            </ul>
+                <p><b>Parrilla-Sidrería Los Sauces</b></p>
+                <p>Tipo de negocio: Restaurante</p>
+                <p>Horario: De martes a domingo de 11:00-24:00</p>
+                <p>Teléfono: 985 54 90 19</p>
         </section>
     </section>
     <div id="mapa"></div>
