Slideshow en cultura e icono de la pagina.

--- a/cultura.html
+++ b/cultura.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="slideshow.js"></script>
+    <link rel="icon" type="image/ico" href="./favicon.ico" />
     <title>Avilés</title>
 </head>
 
@@ -28,6 +31,16 @@
         <!-- Datos extraidos de la página web www.turismoasturias.es -->
         <h2>Cultura</h2>
         <p>La oferta cultural de Avilés es una de las más extensas y reconocidas no solo dentro del principado sino tambien en toda España.</p>
+        <div class="slideshow">
+            <img src="./multimedia/img/ferreria.jpg" alt="Calle Ferreria">
+            <img src="./multimedia/img/carriona.jpg" alt="Cementerio de la Carriona">
+            <img src="./multimedia/img/niemeyer2.jpg" alt="Vista aerea Niemeyer">
+        </div>
+        <div class="bolas">
+            <div class="bola"></div>
+            <div class="bola"></div>
+            <div class="bola"></div>
+        </div>
         <section>
             <h3>Museo de la Historia urbana de Avilés</h3>
             <p>Espacio destinado a la exposición y divulgación de la historia y el patrimonio artístico y monumental de la villa milenaria de Avilés a través de cuatro grandes áreas: La villa Medieval, la Villa Moderna, la Ciudad Burguesa y la Ciudad Industrial.</p>
