--- a/turismo.html
+++ b/turismo.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Avilés</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" type="image/ico" href="./favicon.ico" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="geolocalizacion.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6j4mF6blrc4kZ54S6vYZ2_FpMY9VzyRU&callback=g.readFile"></script>
