--- a/deporte.html
+++ b/deporte.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/ico" href="./favicon.ico" />
     <title>Avilés</title>
 </head>
 
