--- a/historia.html
+++ b/historia.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/ico" href="./favicon.ico" />
     <title>Avilés</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="personajes.js"></script>
