--- a/cultura.html
+++ b/cultura.html
@@ -7,6 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="slideshow.js"></script>
     <link rel="icon" type="image/ico" href="./favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" /> 
     <title>Avilés</title>
 </head>
 
