--- a/deporte.html
+++ b/deporte.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/ico" href="./favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" /> 
     <title>Avilés</title>
 </head>
 
