--- a/historia.html
+++ b/historia.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/ico" href="./favicon.ico" />
     <title>Avilés</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1" /> 
     <script src="personajes.js"></script>
 </head>
 
