Pequeñas mejoras de resaltado de texto.

--- a/turismo.html
+++ b/turismo.html
@@ -29,10 +29,10 @@
         </ul>
     </nav>
     <h2>El sueño del acero</h2>
-    <p>La comarca de Avilés ejemplifica como ninguna el pasado, el presente y el futuro de Asturias. Por su tradición
+    <p><b>La comarca de Avilés ejemplifica como ninguna el pasado, el presente y el futuro de Asturias. Por su tradición
         obrera y siderúrgica, de la que quedan aún multitud de restos arqueológicos industriales y chimeneas humeantes,
         por su capacidad para reinventarse y emerger de la crisis como un territorio moderno que sabe conservar su
-        patrimonio y por sus sueños culturales y vanguardistas.</p>
+        patrimonio y por sus sueños culturales y vanguardistas.</b></p>
     <section>
         <h2>El parque de Ferrera</h2>
         <p>Esta propiedad perteneció al marquesado de Ferrera desde el siglo XV, aunque no sería hasta mediados del
