--- a/turismo.html
+++ b/turismo.html
@@ -107,7 +107,7 @@
                 <p>Horario: Todos los días de 10:00-22:00</p>
                 <p>Teléfono: 985 51 46 17</p>
         </section>
-        <section class="local"></section>
+        <section class="local">
                 <p><b>URH Hotel Spa Zen Balagares</b></p>
                 <p>Tipo de negocio: Hotel</p>
                 <p>Horario: Recepción 24 horas</p>
