--- a/turismo.html
+++ b/turismo.html
@@ -34,7 +34,7 @@
         por su capacidad para reinventarse y emerger de la crisis como un territorio moderno que sabe conservar su
         patrimonio y por sus sueños culturales y vanguardistas.</b></p>
     <section>
-        <hr></hr>
+        <hr>
         <h2>El parque de Ferrera</h2>
         <p>Esta propiedad perteneció al marquesado de Ferrera desde el siglo XV, aunque no sería hasta mediados del
             siglo XVII con la construcción del palacio cuando la adecuaron con el fin de transformarla en unos jardines
@@ -48,10 +48,10 @@
             <li class="longitud">-5.922652777777778</li>
         </ul>
         <h3>Fotografías</h3>
-        <ul><img src="./multimedia/img/ferrera1.jpg" alt="Fotografia del punto. ./multimedia/img/ferrera1.jpg">
+        <div><img src="./multimedia/img/ferrera1.jpg" alt="Fotografia del punto. ./multimedia/img/ferrera1.jpg">
             <img src="./multimedia/img/ferrera2.JPG" alt="Fotografia del punto. ./multimedia/img/ferrera2.JPG">
             <img src="./multimedia/img/ferrera3.jpg" alt="Fotografia del punto. ./multimedia/img/ferrera3.jpg">
-            </ul>
+            </div>
         <h3>Vídeos</h3>
         <video controls="controls"><source src="./multimedia/video/ferrera.mp4" type="video/mp4"></video>
         <h3>Curiosidades</h3>
@@ -63,21 +63,21 @@
         <p>Una partida presupuestaria del ayuntamiento será destinada para la rehabilitación del habitat de las ocas del
             estanque.</p>
         <h3>Locales próximos</h3>
-        <section class="local">
+        <div class="local">
                 <p><b>NH Collection Palacio de Aviles</b></p>
                 <p>Tipo de negocio: Hotel</p>
                 <p>Horario: Recepción 24 horas</p>
                 <p>Teléfono: 916 00 83 36</p>
-        </section>
-        <section class="local">
+        </div>
+        <div class="local">
                 <p><b>Casa Tataguyo</b></p>
                 <p>Tipo de negocio: Restaurante</p>
                 <p>Horario: De lunes a viernes de 9:00-24:00</p>
                 <p>Teléfono: 985 56 48 15</p>
-        </section>
+        </div>
     </section>
     <section>
-        <hr></hr>
+        <hr>
         <h2>Embalse de Trasona</h2>
         <p>En sus aguas entrenan profesionales del piragüismo y del remo y se celebran numerosos campeonatos
             internacionales. Podemos destacar al palista avilesino Enrique José Rodríguez Martín, tricampeón de Asturias
@@ -88,9 +88,9 @@
             <li class="longitud">-5.878425000000001</li>
         </ul>
         <h3>Fotografías</h3>
-        <ul><img src="./multimedia/img/trasona1.jpg" alt="Fotografia del punto. ./multimedia/img/trasona1.jpg"><img
+        <div><img src="./multimedia/img/trasona1.jpg" alt="Fotografia del punto. ./multimedia/img/trasona1.jpg"><img
                 src="./multimedia/img/trasona2.jpg" alt="Fotografia del punto. ./multimedia/img/trasona2.jpg"><img
-                src="./multimedia/img/trasona3.jpg" alt="Fotografia del punto. ./multimedia/img/trasona3.jpg"></ul>
+                src="./multimedia/img/trasona3.jpg" alt="Fotografia del punto. ./multimedia/img/trasona3.jpg"></div>
         <h3>Vídeos</h3>
         <video controls="controls"><source src="./multimedia/video/pantano.mp4" type="video/mp4"></video>
         <h3>Curiosidades</h3>
@@ -101,21 +101,21 @@
         <p>El embalse de Trasona albergará las próximas citas del campeonato de media maratón de piragüismo.</p>
         <p>Reabre la cafetería del Centro de Tecnificación Deportiva de Trasona tras 4 años de inactiviad.</p>
         <h3>Locales próximos</h3>
-        <section class="local">
+        <div class="local">
                 <p><b>ParqueAstur</b></p>
                 <p>Tipo de negocio: Centro Comercial</p>
                 <p>Horario: Todos los días de 10:00-22:00</p>
                 <p>Teléfono: 985 51 46 17</p>
-        </section>
-        <section class="local">
+        </div>
+        <div class="local">
                 <p><b>URH Hotel Spa Zen Balagares</b></p>
                 <p>Tipo de negocio: Hotel</p>
                 <p>Horario: Recepción 24 horas</p>
                 <p>Teléfono: 974 56 88 87</p>
-        </section>
+        </div>
     </section>
     <section>
-        <hr></hr>
+        <hr>
         <h2>Ermita Nuestra Señora Virgen de La Luz</h2>
         <p>Ermita situada en la cumbre de la colina de la Xuncarosa, dispone una de las mejores panorámicas de la Villa
             de Avilés.</p>
@@ -125,10 +125,10 @@
             <li class="longitud">-5.913436111111111</li>
         </ul>
         <h3>Fotografías</h3>
-        <ul><img src="./multimedia/img/ermita1.jpg" alt="Fotografia del punto. ./multimedia/img/ermita1.jpg">
+        <div><img src="./multimedia/img/ermita1.jpg" alt="Fotografia del punto. ./multimedia/img/ermita1.jpg">
             <img src="./multimedia/img/ermita2.jpg" alt="Fotografia del punto. ./multimedia/img/ermita2.jpg">
             <img src="./multimedia/img/ermita3.jpg" alt="Fotografia del punto. ./multimedia/img/ermita3.jpg">
-        </ul>
+        </div>
         <h3>Vídeos</h3>
         <video controls="controls"><source src="./multimedia/video/ermita.mp4" type="video/mp4"></video>
         <h3>Curiosidades</h3>
@@ -139,22 +139,22 @@
         <p>El arzobispado anuncia la restauracion de los frescos de la ermita de La Luz.</p>
         <p>El ayuntamiento comienza la mejora de la via de acceso a la ermita de La Luz.</p>
         <h3>Locales próximos</h3>
-        <section class="local">
+        <div class="local">
                 <p><b>Restaurante-Sidrería Panorama</b></p>
-                <p>Tipo de negocio: Restaurante</li>
+                <p>Tipo de negocio: Restaurante</p>
                 <p>Horario: Todos los días de 12:00-1:45</p>
                 <p>Teléfono: 985 57 99 84</p>
-        </section>
-        <section class="local">
+        </div>
+        <div class="local">
                 <p><b>Parrilla-Sidrería Los Sauces</b></p>
                 <p>Tipo de negocio: Restaurante</p>
                 <p>Horario: De martes a domingo de 11:00-24:00</p>
                 <p>Teléfono: 985 54 90 19</p>
-        </section>
+        </div>
     </section>
-    <hr></hr>
+    <hr>
     <div id="mapa"></div>
-    <hr></hr>
+    <hr>
     <footer>
         <p>Página realizada por Enrique José Rodríguez Martín </p><img
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Copyleft.svg/1024px-Copyleft.svg.png"
