--- a/historia.html
+++ b/historia.html
@@ -60,6 +60,7 @@
         <hr>
         <section>
             <h3>Personajes Ilustres de la villa</h3>
+            <div>
             <table>
                 <thead>
                     <tr>
@@ -71,6 +72,7 @@
                 <tbody class="personajes">
                 </tbody>
             </table>
+            </div>
         </section>
         <hr>
     </section>
