--- a/historia.html
+++ b/historia.html
@@ -79,7 +79,7 @@
     <!-- La paleta de colores elegida sigue el estandard IBM para usbilidad daltonismo https://www.ibm.com/design/language/elements/color/#blue-core -->
     <section>
         <h3>Evolución de la poblacion de Avilés</h3>
-        <img src="./poblacion.svg"/>
+        <img src="./poblacion.svg" alt="Grafico evolucion poblacion de aviles"/>
     </section>
     <hr>
     <section>
